--- a/config/locales/custom/de-DE/activerecord.yml
+++ b/config/locales/custom/de-DE/activerecord.yml
@@ -17,8 +17,8 @@ de:
         one: "Budget"
         other: "Budgets"
       budget/investment:
-        one: "Investitionsvorschlag"
-        other: "Investitionsvorschläge"
+        one: "Projektvorschlag"
+        other: "Projektvorschläge"
       milestone:
         one: "Meilenstein"
         other: "Meilensteine"
@@ -171,8 +171,8 @@ de:
         external_url: "Link zur weiteren Dokumentation"
         administrator_id: "Administrator*in"
         location: "Standort (optional)"
-        organization_name: "Investitionsvorschlag erstellen im Namen von..."
-        image: "Beschreibendes Bild zum Investitionsvorschlag"
+        organization_name: "Projektvorschlag erstellen im Namen von..."
+        image: "Beschreibendes Bild zum Projektvorschlag"
         image_title: "Bildtitel"
         duration: "Zeitrahmen"
         feasibility_feasible: "Durchführbar"
@@ -328,7 +328,7 @@ de:
       signature_sheet:
         title: "Titel"
         signable_type: "Unterschriftentyp"
-        signable_id: "ID des Vorschlags/Investitionsvorschlags"
+        signable_id: "ID des Vorschlags/Projektvorschlags"
         document_numbers: "Dokumentennummern"
       sdg/goal:
         code: "Code"
