--- a/config/locales/custom/de-DE/settings.yml
+++ b/config/locales/custom/de-DE/settings.yml
@@ -106,16 +106,16 @@ de:
         recommendations_on_debates_description: "Zeigt Diskussions-Empfehlungen auf der Diskussionsübersichtsseite an, basierend auf dem Nutzerverhalten."
         recommendations_on_proposals: "Empfehlungen für Vorschläge"
         recommendations_on_proposals_description: "Zeigt Vorschlags-Empfehlungen auf der Vorschlagssübersichtsseite an, basierend auf dem Nutzerverhalten."
-      community: "Community für Vorschläge und Investitionsvorschläge"
+      community: "Community für Vorschläge und Projektvorschläge"
       community_description: "Schaltet den Community-Bereich in der Rubrik Vorschläge und Investitionsprojekte der Budgets ein"
       machine_learning: "AI / Machine learning"
       machine_learning_description: "Aktivieren Sie den Bereich KI/Maschinelles Lernen, um Python-Skripte auszuführen und Inhalte automatisch anzureichern."
       map: "Der Standort von Vorschlägen und Investitonsvorschlägen wird angezeigt"
       map_description: "Ermöglicht die Geolokalisierung der Vorschläge und Investitionsprojekte"
       allow_images: "Upload und Anzeigen von Bildern erlauben"
-      allow_images_description: "Ermöglicht Nutzern das Hochladen von Bildern für Vorschläge und Investitionsvorschlägen"
+      allow_images_description: "Ermöglicht Nutzern das Hochladen von Bildern für Vorschläge und Projektvorschlägen"
       allow_attached_documents: "Upload und Anzeigen von angehängten Dokumenten erlauben"
-      allow_attached_documents_description: "Ermöglicht Nutzern das Hochladen von Dokumenten für Vorschläge und Investitionsvorschlägen"
+      allow_attached_documents_description: "Ermöglicht Nutzern das Hochladen von Dokumenten für Vorschläge und Projektvorschlägen"
       guides: "Anleitungen zum Erstellen von Vorschlägen und Investitionsprojekten"
       guides_description: "Zeigt eine Anleitung an, um Vorschlägen von Investitionsprojekten zu unterscheiden, falls es ein aktives partipatives Budget gibt"
       public_stats: "Statistiken"
@@ -129,7 +129,7 @@ de:
       remote_census: "Konfigurieren Sie die Verbindung zu einem Melderegister per API (SOAP)"
       remote_census_description: "Ermöglicht den Nutzer-Abgleich per API"
       valuation_comment_notification: "Benachrichtigung bei Gutachterbewertungen"
-      valuation_comment_notification_description: "E-Mailversand bei Gutachterbewertungen von Investitionsvorschlägen an alle Nutzer:innen, die in Zusammenhang mit dem Investitionsvorschlag stehen"
+      valuation_comment_notification_description: "E-Mailversand bei Gutachterbewertungen von Projektvorschlägen an alle Nutzer:innen, die in Zusammenhang mit dem Projektvorschlag stehen"
       graphql_api: "GraphQL API"
       dashboard:
         notification_emails: "Dashboard Email-Benachrichtigungen"
