--- a/config/locales/custom/de-DE/stats.yml
+++ b/config/locales/custom/de-DE/stats.yml
@@ -20,20 +20,20 @@ de:
     budgets:
       link: "Statistiken"
       page_title: "%{budget} - Partizipation Statistiken"
-      total_investments: "Investitionsvorschläge gesamt"
+      total_investments: "Projektvorschläge gesamt"
       total_selected_investments: "Vorschläge in finaler Abstimmungsphase"
       total_unfeasible_investments: "Nicht durchführbare Vorschläge"
       by_phase: "Teilnehmer*innen nach Phase"
       by_heading: "Teilnehmer*innen nach Phase und Rubrik"
       total: "Gesamt"
       heading: "Rubrik"
-      investments_sent: "Eingereichte Investitionsvorschläge"
+      investments_sent: "Eingereichte Projektvorschläge"
       participants_support_phase: "Teilnehmer*innen Unterstützung-Phase"
       participants_vote_phase: "Teilnehmer*innen Abstimmungs-Phase"
       participants_every_phase: "Gesamtanzahl Teilnehmer*innen"
       percent_total_participants: "% Gesamtanzahl Teilnehmer*innen"
       percent_heading_census: "% Zensus"
-      participatory_disclaimer: "** Die Gesamtzahl der Teilnehmer bezieht sich auf Personen, die Investitionsvorschläge erstellt, unterstützt oder abgestimmt haben."
+      participatory_disclaimer: "** Die Gesamtzahl der Teilnehmer bezieht sich auf Personen, die Projektvorschläge erstellt, unterstützt oder abgestimmt haben."
       heading_disclaimer: "*** Daten über Rubriken beziehen sich auf die Rubrik, in der jeder Benutzer abgestimmt hat, nicht unbedingt auf diejenige, in der die Person registriert ist."
     polls:
       by_channel: "Teilnehmer*innen nach Kanal"
