--- a/config/locales/de-DE/stats.yml
+++ b/config/locales/de-DE/stats.yml
@@ -26,13 +26,13 @@ de:
       by_heading: "Teilnehmer*innen nach Phase und Rubrik"
       total: "Gesamt"
       heading: "Rubrik"
-      investments_sent: "Eingereichte Investitionsvorschläge"
+      investments_sent: "Eingereichte Projektvorschläge"
       participants_support_phase: "Teilnehmer*innen Unterstützung-Phase"
       participants_vote_phase: "Teilnehmer*innen Abstimmungs-Phase"
       participants_every_phase: "Gesamtanzahl Teilnehmer*innen"
       percent_total_participants: "% Gesamtanzahl Teilnehmer*innen"
       percent_heading_census: "% Rubrik Zensus"
-      participatory_disclaimer: "** Die Gesamtzahl der Teilnehmer bezieht sich auf Personen, die Investitionsvorschläge erstellt, unterstützt oder abgestimmt haben."
+      participatory_disclaimer: "** Die Gesamtzahl der Teilnehmer bezieht sich auf Personen, die Projektvorschläge erstellt, unterstützt oder abgestimmt haben."
       heading_disclaimer: "*** Daten über Rubriken beziehen sich auf die Rubrik, in der jeder Benutzer abgestimmt hat, nicht unbedingt auf diejenige, in der die Person registriert ist."
     polls:
       by_channel: "Teilnehmer*innen nach Kanal"
