--- a/config/locales/custom_updates/de-DE/budgets.yml
+++ b/config/locales/custom_updates/de-DE/budgets.yml
@@ -11,17 +11,17 @@ de:
       investments:
         show:
           callouts:
-            undecided: Dieser Investitionsvorschlag befindet sich gerade noch in der Bewertung.
-            unfeasible: Dieser Investitionsvorschlag wurde als nicht durchführbar klassifiziert.
+            undecided: Dieser Projektvorschlag befindet sich gerade noch in der Bewertung.
+            unfeasible: Dieser Projektvorschlag wurde als nicht durchführbar klassifiziert.
           implementation: Umsetzung
           implementation_user_text_html: "<p>%{author} unterstützt bei der Durchführung<p><p>%{implementation_contribution}</p>"
           implementation_city_text_html: "<p>Soll von Stadtverwaltung umgesetzt werden</p>"
           user_cost_estimate: "Preisliche Einschätzung"
         statuses:
           phases:
-            accepting: Der Investitionsvorschlag wurde erfolgreich eingereicht.
-            reviewing: Der Investitionsvorschlag wird zur Zeit intern auf seine Durchführbarkeit überprüft.
-            valuating: Die Kosten für diesen Investitionsvorschlag werden intern ermittelt.
+            accepting: Der Projektvorschlag wurde erfolgreich eingereicht.
+            reviewing: Der Projektvorschlag wird zur Zeit intern auf seine Durchführbarkeit überprüft.
+            valuating: Die Kosten für diesen Projektvorschlag werden intern ermittelt.
             reviewing_ballots: Die Abstimmung wird gerade intern überprüft.
         form:
-          required: Ihr Investitionsvorschlag
+          required: Ihr Projektvorschlag
