--- a/config/locales/de-DE/budgets.yml
+++ b/config/locales/de-DE/budgets.yml
@@ -85,7 +85,7 @@ de:
         map_remove_marker: "Entfernen Sie die Kartenmarkierung"
       index:
         title: Bürgerhaushalte
-        unfeasible: Undurchführbare Investitionsvorschläge
+        unfeasible: Undurchführbare Projektvorschläge
         unfeasible_text: "Der Ausgabenvorschlag muss eine gewisse Anzahl von Anforderungen erfüllen, (Legalität, Durchführbarkeit, im Aufgabenbereich der Stadt, innerhalb des Limits des Haushaltes) um für durchführbar erklärt werden zu können und das Stadium der finalen Abstimmung zu erreichen. Alle Ausgabenvorschläge, die diese Kriterien nicht erfüllen, sind als nicht durchführbar markiert und stehen in der folgenden Liste, zusammen mit einem Bericht zur Undurchführbarkeit."
         by_heading: "Ausgabenvorschläge im Bereich: %{heading}"
         search_form:
