--- a/config/locales/custom_updates/de-DE/base.yml
+++ b/config/locales/custom_updates/de-DE/base.yml
@@ -103,7 +103,7 @@ de:
         account_link: Konto
         notification_item:
           no_notifications: Keine Benachrichtigungen
-        title_html: "Öffentlichkeitsbeteiligung"
+        title_html: "Bürgerbeteiligung"
       footer:
         demokratie: demokratie.today
         demokratie_url: https://www.demokratie.today/
