--- a/config/locales/custom_updates/de-DE/activerecord.yml
+++ b/config/locales/custom_updates/de-DE/activerecord.yml
@@ -64,3 +64,5 @@ de:
         bam_street_id: Straße
       projekt_phase:
         bam_street_id: Straße
+      poll:
+        bam_street_restricted: Beschränkt auf Straßen
