--- a/config/locales/custom_updates/de-DE/admin.yml
+++ b/config/locales/custom_updates/de-DE/admin.yml
@@ -168,7 +168,7 @@ de:
               budget_phase: Budgets
               voting_phase: Abstimmungen
               question_phase: Kurzumfragen
-              legislation_process_phase: Textbearbeitung
+              legislation_process_phase: Transparenzgesetzphase
             main_block_title: Projektstatus
             milestone_phase: Umsetzungsphase
             name: Projekteinstellungen
@@ -182,7 +182,7 @@ de:
             start_date: Anfangsdatum
             voting_manage: Abstimmungen verwalten
             voting_phase: Abstimmungsphase
-            legislation_process_phase: Textbearbeitungsphase
+            legislation_process_phase: Transparenzgesetzphase
           projekt_questions_tab:
             name: Kurzumfragen
             title: Fragen
