--- a/config/locales/custom_updates/de-DE/projekts.yml
+++ b/config/locales/custom_updates/de-DE/projekts.yml
@@ -51,7 +51,7 @@ de:
           projekt_questions: Kurzumfrage
           proposals: Vorschläge
           questions: Questions
-          legislation_processes: Textbearbeitung
+          legislation_processes: Transparenzgesetz
       phase_name:
         budget_phase: Budget
         comment_phase: Kommentare
@@ -66,7 +66,7 @@ de:
         proposal_phase: Vorschläge
         question_phase: Kurzumfrage
         voting_phase: Abstimmungen
-        legislation_process_phase: Textbearbeitungsphase
+        legislation_process_phase: Transparenzgesetzphase
       projekt_events:
         orders:
           all: Alle
