--- a/config/locales/custom_updates/de-DE/activerecord.yml
+++ b/config/locales/custom_updates/de-DE/activerecord.yml
@@ -33,6 +33,8 @@ de:
         on_behalf_of: Diskussion im Namen von jemanden erstellen
       proposal:
         on_behalf_of: Vorschlag im Namen von jemanden erstellen
+      budget:
+        voting_style_multiple_votes: "Mehrere Stimmen"
       budget/investment:
         implementation_performer: Umsetzung des Investitionsvorschlages
         implementation_performers:
