--- a/config/locales/custom_updates/en/activerecord.yml
+++ b/config/locales/custom_updates/en/activerecord.yml
@@ -33,6 +33,8 @@ en:
         on_behalf_of: Create debate on behalf of someone
       proposal:
         on_behalf_of: Create proposal on behalf of someone
+      budget:
+        voting_style_multiple_votes: Multiple votes
       budget/investment:
         implementation_performer: Implementation of investment proposal
         implementation_performers:
