--- a/config/locales/custom_updates/en/budgets.yml
+++ b/config/locales/custom_updates/en/budgets.yml
@@ -11,6 +11,15 @@ en:
       investments:
         form:
           required: Your investment proposal
+        investment:
+          supporters:
+            zero: No supporters
+            one: "1 supporter"
+            other: "%{count} supporters"
+          supports:
+            zero: No votes
+            one: 1 vote
+            other: "%{count} votes"
         show:
           callouts:
             publishing_prices:
